--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -800,8 +800,8 @@ video {
   height: 5rem;
 }
 
-.h-\[20rem\] {
-  height: 20rem;
+.h-12 {
+  height: 3rem;
 }
 
 .max-h-\[85vh\] {
@@ -860,8 +860,8 @@ video {
   width: 1.5rem;
 }
 
-.w-\[7rem\] {
-  width: 7rem;
+.w-\[5rem\] {
+  width: 5rem;
 }
 
 .w-\[100vw\] {
@@ -884,10 +884,6 @@ video {
   width: 0.75rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
 .w-full {
   width: 100%;
 }
@@ -904,40 +900,8 @@ video {
   width: 2.25rem;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[95vw\] {
-  width: 95vw;
-}
-
-.w-\[20em\] {
-  width: 20em;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
-}
-
-.w-\[3rem\] {
+.w-12 {
   width: 3rem;
-}
-
-.w-\[1rem\] {
-  width: 1rem;
-}
-
-.w-\[2rem\] {
-  width: 2rem;
-}
-
-.w-\[5rem\] {
-  width: 5rem;
-}
-
-.w-\[6rem\] {
-  width: 6rem;
 }
 
 .max-w-full {
@@ -1352,11 +1316,6 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
@@ -1365,6 +1324,11 @@ video {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1439,11 +1403,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 .py-8 {
@@ -1565,12 +1524,16 @@ video {
   padding-bottom: 2rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pt-3 {
@@ -1631,10 +1594,6 @@ video {
 
 .pb-7 {
   padding-bottom: 1.75rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -1783,11 +1742,6 @@ video {
   color: rgba(152, 97, 255, var(--tw-text-opacity));
 }
 
-.text-\[\#EB5758\] {
-  --tw-text-opacity: 1;
-  color: rgba(235, 87, 88, var(--tw-text-opacity));
-}
-
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
@@ -1838,11 +1792,6 @@ video {
 
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
-  filter: var(--tw-filter);
-}
-
-.drop-shadow {
-  --tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
   filter: var(--tw-filter);
 }
 
@@ -2036,6 +1985,11 @@ body {
   background-color: rgba(0,0,0,0.8);
 }
 
+.dark .dark\:bg-\[\#292929\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(41, 41, 41, var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-nav-footer {
   --tw-bg-opacity: 1;
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
@@ -2064,56 +2018,6 @@ body {
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#303030\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(48, 48, 48, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#181818\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(24, 24, 24, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#8b8b8b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(139, 139, 139, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#b3b3b3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#535353\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(83, 83, 83, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#1d1d1d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(29, 29, 29, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#202020\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(32, 32, 32, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#292929\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(41, 41, 41, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2198,56 +2102,6 @@ body {
   background-color: rgba(127, 36, 163, var(--tw-bg-opacity));
 }
 
-.dark .dark\:hover\:bg-gray-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#b3b3b3\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#c4c4c4\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(196, 196, 196, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#585858\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(88, 88, 88, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#535353\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(83, 83, 83, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#727272\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(114, 114, 114, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#333333\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(51, 51, 51, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#292929\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(41, 41, 41, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#0e0e0e\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(14, 14, 14, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#202020\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(32, 32, 32, var(--tw-bg-opacity));
-}
-
 .dark .dark\:hover\:bg-\[\#2e2e2e\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(46, 46, 46, var(--tw-bg-opacity));
@@ -2289,6 +2143,10 @@ body {
     width: 80vw;
   }
 
+  .md\:w-\[7rem\] {
+    width: 7rem;
+  }
+
   .md\:w-\[35rem\] {
     width: 35rem;
   }
@@ -2299,14 +2157,6 @@ body {
 
   .md\:w-7 {
     width: 1.75rem;
-  }
-
-  .md\:w-\[20rem\] {
-    width: 20rem;
-  }
-
-  .md\:w-\[7rem\] {
-    width: 7rem;
   }
 
   .md\:max-w-7xl {
@@ -2349,6 +2199,36 @@ body {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:p-10 {
@@ -2457,10 +2337,6 @@ body {
 
   .lg\:w-\[30rem\] {
     width: 30rem;
-  }
-
-  .lg\:w-\[10rem\] {
-    width: 10rem;
   }
 
   .lg\:scale-100 {
