--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1596,6 +1596,18 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
