--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -800,10 +800,6 @@ video {
   height: 5rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
@@ -898,10 +894,6 @@ video {
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .max-w-full {
@@ -1252,29 +1244,14 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
-.border-text-purple {
-  --tw-border-opacity: 1;
-  border-color: rgba(152, 97, 255, var(--tw-border-opacity));
-}
-
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
-.border-gray-500 {
+.border-text-purple {
   --tw-border-opacity: 1;
-  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
-
-.border-r-text-purple {
-  --tw-border-opacity: 1;
-  border-right-color: rgba(152, 97, 255, var(--tw-border-opacity));
-}
-
-.border-t-text-purple {
-  --tw-border-opacity: 1;
-  border-top-color: rgba(152, 97, 255, var(--tw-border-opacity));
+  border-color: rgba(152, 97, 255, var(--tw-border-opacity));
 }
 
 .border-r-menu-pink {
@@ -1586,6 +1563,10 @@ video {
   padding-top: 3.5rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pt-20 {
   padding-top: 5rem;
 }
@@ -1608,18 +1589,6 @@ video {
 
 .pb-7 {
   padding-bottom: 1.75rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
 }
 
 .text-left {
@@ -1763,11 +1732,6 @@ video {
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 
-.text-text-purple {
-  --tw-text-opacity: 1;
-  color: rgba(152, 97, 255, var(--tw-text-opacity));
-}
-
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
@@ -1880,18 +1844,9 @@ body {
   font-display: optional;
 }
 
-.hover\:border:hover {
-  border-width: 1px;
-}
-
 .hover\:border-menu-pink:hover {
   --tw-border-opacity: 1;
   border-color: rgba(226, 59, 139, var(--tw-border-opacity));
-}
-
-.hover\:border-gray-500:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-900:hover {
@@ -1907,11 +1862,6 @@ body {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-
-.hover\:text-text-purple:hover {
-  --tw-text-opacity: 1;
-  color: rgba(152, 97, 255, var(--tw-text-opacity));
 }
 
 .hover\:text-menu-pink:hover {
@@ -1932,11 +1882,6 @@ body {
 .group:hover .group-hover\:text-pink-500 {
   --tw-text-opacity: 1;
   color: rgba(236, 72, 153, var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-text-purple {
-  --tw-text-opacity: 1;
-  color: rgba(152, 97, 255, var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-menu-pink {
@@ -1981,59 +1926,9 @@ body {
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#747474\] {
+.dark .dark\:border-pastel-pink {
   --tw-border-opacity: 1;
-  border-color: rgba(116, 116, 116, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-menu-pink {
-  --tw-border-opacity: 1;
-  border-color: rgba(226, 59, 139, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-text-purple {
-  --tw-border-opacity: 1;
-  border-color: rgba(152, 97, 255, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-logo-pink {
-  --tw-border-opacity: 1;
-  border-color: rgba(255, 0, 102, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-800 {
-  --tw-border-opacity: 1;
-  border-color: rgba(31, 41, 55, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#1d1d1d\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(29, 29, 29, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#202020\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(32, 32, 32, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#252525\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(37, 37, 37, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-r-text-purple {
-  --tw-border-opacity: 1;
-  border-right-color: rgba(152, 97, 255, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-t-text-purple {
-  --tw-border-opacity: 1;
-  border-top-color: rgba(152, 97, 255, var(--tw-border-opacity));
+  border-color: rgba(156, 47, 100, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-r-menu-pink {
@@ -2100,9 +1995,9 @@ body {
   background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#2b2b2b\] {
+.dark .dark\:bg-\[\#1d1d1d\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
+  background-color: rgba(29, 29, 29, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-800 {
@@ -2113,21 +2008,6 @@ body {
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#202020\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(32, 32, 32, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#171717\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#1d1d1d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(29, 29, 29, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2165,11 +2045,6 @@ body {
   color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-text-purple {
-  --tw-text-opacity: 1;
-  color: rgba(152, 97, 255, var(--tw-text-opacity));
-}
-
 .dark .dark\:text-\[\#ADAEAD\] {
   --tw-text-opacity: 1;
   color: rgba(173, 174, 173, var(--tw-text-opacity));
@@ -2182,11 +2057,6 @@ body {
 .dark .dark\:text-red-600 {
   --tw-text-opacity: 1;
   color: rgba(220, 38, 38, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-logo-pink {
-  --tw-text-opacity: 1;
-  color: rgba(255, 0, 102, var(--tw-text-opacity));
 }
 
 .dark .dark\:opacity-100 {
@@ -2220,11 +2090,6 @@ body {
 .dark .dark\:hover\:bg-\[\#2e2e2e\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(46, 46, 46, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:text-text-purple:hover {
-  --tw-text-opacity: 1;
-  color: rgba(152, 97, 255, var(--tw-text-opacity));
 }
 
 .dark .dark\:hover\:text-menu-pink:hover {
@@ -2321,36 +2186,6 @@ body {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:p-10 {
     padding: 2.5rem;
   }
@@ -2434,9 +2269,19 @@ body {
     border-color: rgba(107, 114, 128, var(--tw-border-opacity));
   }
 
+  .dark .md\:dark\:hover\:border-\[\#9c2f64\]:hover {
+    --tw-border-opacity: 1;
+    border-color: rgba(156, 47, 100, var(--tw-border-opacity));
+  }
+
   .dark .md\:dark\:hover\:border-menu-pink:hover {
     --tw-border-opacity: 1;
     border-color: rgba(226, 59, 139, var(--tw-border-opacity));
+  }
+
+  .dark .md\:dark\:hover\:border-pastel-pink:hover {
+    --tw-border-opacity: 1;
+    border-color: rgba(156, 47, 100, var(--tw-border-opacity));
   }
 }
 
