--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1286,6 +1286,11 @@ video {
   border-color: rgba(152, 97, 255, var(--tw-border-opacity));
 }
 
+.border-pink-400 {
+  --tw-border-opacity: 1;
+  border-color: rgba(244, 114, 182, var(--tw-border-opacity));
+}
+
 .border-r-menu-pink {
   --tw-border-opacity: 1;
   border-right-color: rgba(226, 59, 139, var(--tw-border-opacity));
@@ -1680,6 +1685,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-semibold {
@@ -2134,10 +2144,28 @@ body {
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mx-16 {
     margin-left: 4rem;
     margin-right: 4rem;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-16 {
