--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -621,13 +621,6 @@ video {
   position: relative;
 }
 
-.inset-0 {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -668,10 +661,6 @@ video {
   z-index: 40;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -680,11 +669,6 @@ video {
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
 }
 
 .my-3 {
@@ -780,10 +764,6 @@ video {
   height: 2.25rem;
 }
 
-.h-px {
-  height: 1px;
-}
-
 .h-4 {
   height: 1rem;
 }
@@ -860,16 +840,16 @@ video {
   width: 5rem;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-\[100vw\] {
   width: 100vw;
 }
 
 .w-\[22rem\] {
   width: 22rem;
-}
-
-.w-7 {
-  width: 1.75rem;
 }
 
 .w-4 {
@@ -884,6 +864,10 @@ video {
   width: 100%;
 }
 
+.w-\[63vw\] {
+  width: 63vw;
+}
+
 .w-\[75\%\] {
   width: 75%;
 }
@@ -894,38 +878,6 @@ video {
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-\[2\%\] {
-  width: 2%;
-}
-
-.w-\[75vw\] {
-  width: 75vw;
-}
-
-.w-\[50v\] {
-  width: 50v;
-}
-
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[60vw\] {
-  width: 60vw;
-}
-
-.w-\[65vw\] {
-  width: 65vw;
-}
-
-.w-\[62vw\] {
-  width: 62vw;
-}
-
-.w-\[63vw\] {
-  width: 63vw;
 }
 
 .max-w-full {
@@ -1167,18 +1119,6 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
-.space-x-0 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0px * var(--tw-space-x-reverse));
-  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1253,10 +1193,6 @@ video {
   border-style: dotted;
 }
 
-.border-none {
-  border-style: none;
-}
-
 .border-menu-pink {
   --tw-border-opacity: 1;
   border-color: rgba(226, 59, 139, var(--tw-border-opacity));
@@ -1284,11 +1220,6 @@ video {
 .border-text-purple {
   --tw-border-opacity: 1;
   border-color: rgba(152, 97, 255, var(--tw-border-opacity));
-}
-
-.border-pink-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(244, 114, 182, var(--tw-border-opacity));
 }
 
 .border-r-menu-pink {
@@ -1359,10 +1290,6 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .from-logo-pink {
   --tw-gradient-from: #FF0066;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 0, 102, 0));
@@ -1370,10 +1297,6 @@ video {
 
 .to-text-purple {
   --tw-gradient-to: #9861ff;
-}
-
-.to-menu-pink {
-  --tw-gradient-to: #E23B8B;
 }
 
 .bg-clip-text {
@@ -1576,10 +1499,6 @@ video {
   padding-left: 0.25rem;
 }
 
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1628,6 +1547,10 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.pt-\[0\.2rem\] {
+  padding-top: 0.2rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1667,14 +1590,14 @@ video {
   line-height: 2.25rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-xl {
@@ -1687,11 +1610,6 @@ video {
   line-height: 2rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .font-semibold {
   font-weight: 600;
 }
@@ -1702,6 +1620,10 @@ video {
 
 .font-light {
   font-weight: 300;
+}
+
+.font-black {
+  font-weight: 900;
 }
 
 .font-medium {
@@ -1769,6 +1691,11 @@ video {
   color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -1777,16 +1704,6 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-
-.text-pink-600 {
-  --tw-text-opacity: 1;
-  color: rgba(219, 39, 119, var(--tw-text-opacity));
-}
-
-.text-pink-100 {
-  --tw-text-opacity: 1;
-  color: rgba(252, 231, 243, var(--tw-text-opacity));
 }
 
 .underline {
@@ -1810,16 +1727,6 @@ video {
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-filter);
-}
-
-.blur-sm {
-  --tw-blur: blur(4px);
-  filter: var(--tw-filter);
 }
 
 .drop-shadow-sm {
@@ -1926,11 +1833,6 @@ body {
   color: rgba(236, 72, 153, var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:text-menu-pink {
-  --tw-text-opacity: 1;
-  color: rgba(226, 59, 139, var(--tw-text-opacity));
-}
-
 .dark .dark\:block {
   display: block;
 }
@@ -2027,11 +1929,6 @@ body {
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#1a1a1a\] {
   --tw-bg-opacity: 1;
   background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
@@ -2090,15 +1987,6 @@ body {
 .dark .dark\:text-\[\#ADAEAD\] {
   --tw-text-opacity: 1;
   color: rgba(173, 174, 173, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-transparent {
-  color: transparent;
-}
-
-.dark .dark\:text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgba(220, 38, 38, var(--tw-text-opacity));
 }
 
 .dark .dark\:opacity-100 {
@@ -2160,14 +2048,6 @@ body {
     margin-right: 4rem;
   }
 
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
   .md\:h-16 {
     height: 4rem;
   }
@@ -2196,16 +2076,16 @@ body {
     width: 35rem;
   }
 
+  .md\:w-\[75vw\] {
+    width: 75vw;
+  }
+
   .md\:w-\[60\%\] {
     width: 60%;
   }
 
   .md\:w-7 {
     width: 1.75rem;
-  }
-
-  .md\:w-\[75vw\] {
-    width: 75vw;
   }
 
   .md\:max-w-7xl {
@@ -2230,10 +2110,6 @@ body {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:items-end {
-    align-items: flex-end;
   }
 
   .md\:items-center {
@@ -2326,26 +2202,6 @@ body {
 
   .md\:opacity-100 {
     opacity: 1;
-  }
-
-  .md\:hover\:border-gray-500:hover {
-    --tw-border-opacity: 1;
-    border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-  }
-
-  .dark .md\:dark\:hover\:border-\[\#9c2f64\]:hover {
-    --tw-border-opacity: 1;
-    border-color: rgba(156, 47, 100, var(--tw-border-opacity));
-  }
-
-  .dark .md\:dark\:hover\:border-menu-pink:hover {
-    --tw-border-opacity: 1;
-    border-color: rgba(226, 59, 139, var(--tw-border-opacity));
-  }
-
-  .dark .md\:dark\:hover\:border-pastel-pink:hover {
-    --tw-border-opacity: 1;
-    border-color: rgba(156, 47, 100, var(--tw-border-opacity));
   }
 }
 
