--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -748,6 +748,10 @@ video {
   height: 18px;
 }
 
+.h-\[19px\] {
+  height: 19px;
+}
+
 .h-\[22px\] {
   height: 22px;
 }
@@ -778,6 +782,10 @@ video {
 
 .h-20 {
   height: 5rem;
+}
+
+.h-\[17px\] {
+  height: 17px;
 }
 
 .max-h-\[85vh\] {
@@ -822,6 +830,10 @@ video {
 
 .w-\[18px\] {
   width: 18px;
+}
+
+.w-\[19px\] {
+  width: 19px;
 }
 
 .w-\[22px\] {
@@ -878,6 +890,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-\[17px\] {
+  width: 17px;
 }
 
 .max-w-full {
@@ -1547,10 +1563,6 @@ video {
   padding-bottom: 1.75rem;
 }
 
-.pt-\[0\.2rem\] {
-  padding-top: 0.2rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1590,6 +1602,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -1598,11 +1615,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-2xl {
@@ -1622,16 +1634,12 @@ video {
   font-weight: 300;
 }
 
-.font-black {
-  font-weight: 900;
+.font-bold {
+  font-weight: 700;
 }
 
 .font-medium {
   font-weight: 500;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .uppercase {
