--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -780,6 +780,10 @@ video {
   height: 5rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
@@ -840,16 +844,16 @@ video {
   width: 5rem;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
 .w-\[100vw\] {
   width: 100vw;
 }
 
 .w-\[22rem\] {
   width: 22rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-4 {
@@ -878,6 +882,26 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-\[6rem\] {
+  width: 6rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[1\.2rem\] {
+  width: 1.2rem;
+}
+
+.w-\[1\.0rem\] {
+  width: 1.0rem;
 }
 
 .max-w-full {
@@ -1586,11 +1610,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -1601,9 +1620,30 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[0\.85rem\] {
+  font-size: 0.85rem;
+}
+
+.text-\[1\.0rem\] {
+  font-size: 1.0rem;
+}
+
+.text-\[0\.9rem\] {
+  font-size: 0.9rem;
+}
+
+.text-\[0\.95rem\] {
+  font-size: 0.95rem;
 }
 
 .font-semibold {
@@ -2080,6 +2120,22 @@ body {
     width: 1.75rem;
   }
 
+  .md\:w-6 {
+    width: 1.5rem;
+  }
+
+  .md\:w-\[8rem\] {
+    width: 8rem;
+  }
+
+  .md\:w-\[7\.3rem\] {
+    width: 7.3rem;
+  }
+
+  .md\:w-\[7\.2rem\] {
+    width: 7.2rem;
+  }
+
   .md\:max-w-7xl {
     max-width: 80rem;
   }
@@ -2186,6 +2242,11 @@ body {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:opacity-20 {
