--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -780,10 +780,6 @@ video {
   height: 5rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
@@ -840,8 +836,12 @@ video {
   width: 1.5rem;
 }
 
-.w-\[5rem\] {
-  width: 5rem;
+.w-\[6rem\] {
+  width: 6rem;
+}
+
+.w-\[1\.2rem\] {
+  width: 1.2rem;
 }
 
 .w-\[100vw\] {
@@ -882,26 +882,6 @@ video {
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-\[6rem\] {
-  width: 6rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[1\.2rem\] {
-  width: 1.2rem;
-}
-
-.w-\[1\.0rem\] {
-  width: 1.0rem;
 }
 
 .max-w-full {
@@ -1375,6 +1355,11 @@ video {
   padding-right: 3rem;
 }
 
+.px-\[3\.3rem\] {
+  padding-left: 3.3rem;
+  padding-right: 3.3rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1415,34 +1400,9 @@ video {
   padding-right: 5rem;
 }
 
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
-
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.px-\[32\%\] {
-  padding-left: 32%;
-  padding-right: 32%;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.px-\[3\.3rem\] {
-  padding-left: 3.3rem;
-  padding-right: 3.3rem;
-}
-
-.px-\[3\.5rem\] {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
 }
 
 .px-\[3\.7rem\] {
@@ -1453,6 +1413,11 @@ video {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.px-\[32\%\] {
+  padding-left: 32%;
+  padding-right: 32%;
 }
 
 .pt-1 {
@@ -1587,8 +1552,24 @@ video {
   padding-left: 2.25rem;
 }
 
-.pb-7 {
-  padding-bottom: 1.75rem;
+.pt-\[0\.15rem\] {
+  padding-top: 0.15rem;
+}
+
+.pt-\[0\.9rem\] {
+  padding-top: 0.9rem;
+}
+
+.pt-\[1rem\] {
+  padding-top: 1rem;
+}
+
+.pt-\[0\.5rem\] {
+  padding-top: 0.5rem;
+}
+
+.pt-\[0\.5px\] {
+  padding-top: 0.5px;
 }
 
 .text-left {
@@ -1630,6 +1611,10 @@ video {
   line-height: 2.25rem;
 }
 
+.text-\[0\.95rem\] {
+  font-size: 0.95rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -1648,22 +1633,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-\[0\.85rem\] {
-  font-size: 0.85rem;
-}
-
-.text-\[1\.0rem\] {
-  font-size: 1.0rem;
-}
-
-.text-\[0\.9rem\] {
-  font-size: 0.9rem;
-}
-
-.text-\[0\.95rem\] {
-  font-size: 0.95rem;
 }
 
 .font-semibold {
@@ -2120,8 +2089,12 @@ body {
     width: 80vw;
   }
 
-  .md\:w-\[7rem\] {
-    width: 7rem;
+  .md\:w-\[7\.2rem\] {
+    width: 7.2rem;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
   }
 
   .md\:w-\[35rem\] {
@@ -2138,22 +2111,6 @@ body {
 
   .md\:w-7 {
     width: 1.75rem;
-  }
-
-  .md\:w-6 {
-    width: 1.5rem;
-  }
-
-  .md\:w-\[8rem\] {
-    width: 8rem;
-  }
-
-  .md\:w-\[7\.3rem\] {
-    width: 7.3rem;
-  }
-
-  .md\:w-\[7\.2rem\] {
-    width: 7.2rem;
   }
 
   .md\:max-w-7xl {
@@ -2236,10 +2193,6 @@ body {
     padding-bottom: 0;
   }
 
-  .md\:pb-0 {
-    padding-bottom: 0px;
-  }
-
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -2259,14 +2212,14 @@ body {
     line-height: 1.25rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:opacity-20 {
